<resources>
    <string name="app_name">HTGrocery</string>
    <string name="login_sign_up">Login / Sign Up</string>
    <string name="user_id">User Id:</string>
    <string name="email_id">Email Id:</string>
    <string name="password">Password:</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_stock">Add Stock</string>
    <string name="item_name">Item Name</string>
    <string name="qty_in_stock">Qty In Stock</string>
    <string name="price">Price</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="non_taxable">Non Taxable</string>
    <string name="taxable">Taxable</string>
    <string name="sale_record">Sale Record</string>
    <string name="item_code">Item Code</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="qty_sold">Qty Sold</string>
    <string name="date_of_sales">Date of Sales</string>
    <string name="purchase_item">Purchase Item</string>
    <string name="qty_purchased">Qty Purchased</string>
    <string name="search">Search</string>
    <string name="list_of_items">List of Items</string>
    <string name="date_of_purchased">Date of Purchased</string>
    <string name="sales">Sales</string>
    <string name="purchase">Purchase</string>
    <string name="search_stock">Search Stock</string>
    <string name="list_stock">List Stock</string>
    <string name="log_out">Log Out</string>
    <string name="search_a_item">Search a Item</string>
</resources>